# zephyr-txe81xx

./: .clang-format  .editorconfig  .gitignore  .gitlint  CMakeLists.txt  Kconfig  LICENSE  west.yml
.gitea/ISSUE_TEMPLATE/: 001_bug_report.yml  002_enhancement.yml  003_feature_request.yml  config.yml
.gitea/workflows/: ci.yml
doc/: conf.py  index.rst
doc/drivers/: gpio_txe81xx.rst  index.rst
doc/samples/: basic_gpio.rst  gpio_interrupt.rst  index.rst
drivers/gpio/: CMakeLists.txt  Kconfig  gpio_txe81xx.c  txe_spi.c  txe_spi.h
dts/bindings/: vendor-prefixes.txt  xylon-labs,txe8116.yaml  xylon-labs,txe8124.yaml  xylon-labs,txe81xx-base.yaml
samples/basic_gpio/: CMakeLists.txt  README.md
samples/basic_gpio/boards/: nucleo_l476rg.overlay
samples/basic_gpio/src/: main.c
samples/gpio_interrupt/: CMakeLists.txt  README.rst  prj.conf
samples/gpio_interrupt/boards/: nucleo_l476rg.overlay
samples/gpio_interrupt/src/: main.c
tests/edge_filter/: CMakeLists.txt  testcase.yaml
tests/edge_filter/src/: test_edge_filter.c
tests/txe_spi/: CMakeLists.txt  testcase.yaml
tests/txe_spi/src/: test_txe_spi.c
zephyr/: module.yml
